welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: ';' expected but 'else' found.
	else if return -1
        ^